# OMEGA-Arena

./: PROJECT.md  debug_replay.py
game_engine/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  make.bat
game_engine/config/: Constants.cpp  Constants.hpp
game_engine/core/: Halite.cpp  Halite.hpp  HaliteImpl.cpp  HaliteImpl.hpp  Statistics.cpp  Store.cpp  Store.hpp
game_engine/error/: BotCommunicationError.hpp  CommandError.cpp
game_engine/events/: DomainEvent.hpp  EventBuffer.hpp  EventSink.hpp  MultiEventSink.hpp
game_engine/model/: Cell.hpp  Dropoff.hpp  Entity.cpp  Entity.hpp  Player.hpp
game_engine/observers/: LogCollector.hpp  ReplayCollector.hpp  StatsCollector.hpp  TurnStatsCollector.hpp
game_engine/protocol/: ActionDTO.hpp  Observation.hpp  (+2 more)
libhaliteviz/: package-lock.json  package.json  viewer.html  webpack.config.js
rl/: halite_env.py  halite_pettingzoo.py  requirements.txt  rl_bot.py  smoke_test.py  train_ppo.py
starter_kits/: README.md
starter_kits/C++/: CMakeLists.txt  MyBot.cpp  README.md  analyze_scores.py  best_params_cpp.json  bot_params.hpp  bot_params.txt  bot_params_adaptive.txt  bot_params_aggro.txt  bot_params_control.txt  bot_params_eco.txt  competitive_engine.json  competitive_engine_regen.json  competitive_engine_v2.json  measure_combat.py  metagame_roundrobin.py  sweep_combat.py  train_config.json  train_engine_cap7.json  train_pipeline.py  validate_adaptive.py
starter_kits/C++/hlt/: command.cpp  command.hpp  constants.cpp  constants.hpp  ship.cpp  ship.hpp
website/: Gemfile  package-lock.json  package.json
(+97 files in other folders)
